# todo-ai-agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: main.py
app/agents/: callbacks.py  executor.py  prompts.py  todo_agent.py
app/api/: deps.py
app/api/v1/: agent.py  router.py  todos.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/domain/: enums.py  models.py  schemas.py
app/repositories/: todo_repository.py
app/services/: agent_service.py  todo_service.py
app/tests/: conftest.py
app/tests/api/: test_todos.py
app/tools/: base.py  todo_tools.py  tool_config.py
app/utils/: constants.py  datetime.py  exceptions.py
scripts/: init_db.py  verify_setup.py
